# biscuit-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  performance.js  shell.nix
.github/workflows/: ci.yaml
examples/frontend/: index.html  index.js  package-lock.json  package.json  webpack.config.cjs
examples/node/: express.js  index.js  package-lock.json  package.json
js-tests/: index.js  package-lock.json  package.json
snippets/: biscuit-express.js  tagged-templates.js
snippets/definitions/: biscuit-express.d.ts  tagged-templates.d.ts
src/: authorizer.rs  builder.rs  crypto.rs  lib.rs
web/: package.json
