[package]
name = "biscuit-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
biscuit-auth = { version = "2.0.0-beta3", features = ["wasm"] }
console_error_panic_hook = "0.1.7"
log = "0.4.14"
rand = "0.7"
wasm-bindgen = "0.2.78"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
