[package]
name = "biscuit-wasm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/biscuit-auth/biscuit-wasm"
description = "WebAssembly wrapper for Biscuit authorization tokens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
biscuit-auth = { version = "2.0.0-beta7", features = ["wasm", "serde-error"] }
console_error_panic_hook = "0.1.7"
log = "0.4.14"
rand = "0.7"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
