[package]
name = "biscuit-wasm"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/biscuit-auth/biscuit-wasm"
description = "WebAssembly wrapper for Biscuit authorization tokens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
biscuit-auth = { version = "3.0.0-alpha3", features = ["wasm", "serde-error"] }
biscuit-parser = { version = "0.1.0-alpha3", features = ["serde-error"] }
console_error_panic_hook = "0.1.7"
hex = "0.4.3"
log = "0.4.14"
rand = "0.7"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"] }
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
getrandom = { version = "0.2.8", features = ["js"] }
serde-wasm-bindgen = "0.4.5"
serde = "1.0.147"
